Terminamos los ejercicios 1-3 de flex
Terminamos los ejercicios 1-3 de flex en
foundations.

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,20 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.left-wrapper{
+  display: flex;
+  gap: 20px;
+}
+
+.right-wrapper{
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
 
 .profile-image {
@@ -20,6 +34,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  flex-shrink: 0;
 }
 
 .logo {
@@ -45,4 +60,7 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 20px;
+  padding-inline-start: 0px;
 }
