--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items:center ;
+  padding-top: 10px;
+  padding: 10px;
 }
 
 .logo {
@@ -12,14 +17,18 @@
 }
 
 ul {
-  /* this removes the dots on the list items*/
   list-style-type: none;
+  padding-inline-start: 0;
 }
 
 a {
   font-size: 22px;
   background: white;
   padding: 8px;
-  /* this removes the line under the links */
   text-decoration: none;
+}
+
+.left-links ul, .right-links ul{
+  display: flex;
+  gap: 20px;
 }
