--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,25 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+}
+
+.general-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flowers-wrapper{
+  display: flex;
+  gap: 52px;
+}
+
+.flower{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 200px;
 }
 
 /* do not edit this footer */
