--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -6,9 +6,15 @@ html {
 
 .container {
   text-align: center;
-  height: 100%;
+  width: 100%;
+  height: 100vh;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: repeat(15, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
 }
 
 .container div {
@@ -22,22 +28,32 @@ html {
 
 .header {
   background-color: #006157;
+  grid-column: 1 / 16;
+  grid-row: 1 / 2;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-column: 1 / 5;
+  grid-row: 2 / 10;
 }
 
 .nav {
   background-color: #642cde;
+  grid-column: 5 / 16;
+  grid-row: 2 / 3;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-column: 5 / 16;
+  grid-row: 3 / 10;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 16;
+  grid-row: 10 / 11;
 }
 
 .article p {
